--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^2.3.0"
 jupyter = "^1.1.1"
 ipykernel = "^6.29.5"
 openpyxl = "^3.1.5"
+myplotlib = "^1.5.0"
+seaborn = "^0.13.2"
+scipy = "^1.16.0"
 
 
 [build-system]
