--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ openpyxl = "^3.1.5"
 myplotlib = "^1.5.0"
 seaborn = "^0.13.2"
 scipy = "^1.16.0"
+sqlalchemy = "^2.0.41"
+psycopg2-binary = "^2.9.10"
+requests = "^2.32.4"
+python-dotenv = "^1.1.0"
 
 
 [build-system]
