--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,33 @@ services:
       - "5432:5432"
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
+
+ # Redpanda broker
+  redpanda:
+    image: redpandadata/redpanda:v23.3.11
+    container_name: redpanda
+    command:
+      - redpanda
+      - start
+      - --overprovisioned
+      - --smp 1
+      - --memory 512M
+      - --reserve-memory 0M
+      - --node-id 0
+      - --check=false
+    ports:
+      - "9092:9092"      # port Kafka API
+      - "9644:9644"      # port Admin API (pour Redpanda Console)
+    volumes:
+      - ./redpanda_data:/var/lib/redpanda/data
+
+  # Redpanda Console (monitoring visuel du broker)
+  redpanda-console:
+    image: docker.redpanda.com/redpandadata/console:latest
+    container_name: redpanda_console
+    environment:
+      - KAFKA_BROKERS=redpanda:9092
+    ports:
+      - "8080:8080"
+    depends_on:
+      - redpanda
