--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ sqlalchemy = "^2.0.41"
 psycopg2-binary = "^2.9.10"
 requests = "^2.32.4"
 python-dotenv = "^1.1.0"
+confluent-kafka = "^2.10.1"
 
 
 [build-system]
