--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 description = ""
 authors = ["Maeva Beauvillain <m.berte@hotmail.fr>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.13"
-pandas = "^2.3.0"
+python = ">=3.11,<3.13"
+pandas = "^2.1.4"
 jupyter = "^1.1.1"
 ipykernel = "^6.29.5"
 openpyxl = "^3.1.5"
@@ -20,6 +21,7 @@ requests = "^2.32.4"
 python-dotenv = "^1.1.0"
 confluent-kafka = "^2.10.1"
 slack-sdk = "^3.35.0"
+great-expectations = "^1.5.3"
 
 
 [build-system]
