--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^1.1.0"
 confluent-kafka = "^2.10.1"
 slack-sdk = "^3.35.0"
 great-expectations = "^1.5.3"
+boto3 = "^1.39.0"
 
 
 [build-system]
