Refactor config to isolate Kafka imports and avoid Airflow dependency

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,9 @@ x-airflow-common:
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_poc:5432/${POSTGRES_DB}
     AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS: 'false'
   volumes:
-    - ./dags:/opt/airflow/dags
-    - ./logs:/opt/airflow/logs
-    - ./plugins:/opt/airflow/plugins
+    - ./airflow/dags:/opt/airflow/dags
+    - ./airflow/logs:/opt/airflow/logs
+    - ./airflow/plugins:/opt/airflow/plugins
     - ./scripts:/opt/airflow/scripts
     - ./requirements-airflow.txt:/requirements.txt
   depends_on:
