--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,13 @@ x-airflow-common:
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
     AIRFLOW__CORE__AUTH_MANAGER: airflow.providers.fab.auth_manager.fab_auth_manager.FabAuthManager
     AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_poc:5432/${POSTGRES_DB}
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_poc:5432/${POSTGRES_DB}
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0    
     AIRFLOW__CORE__FERNET_KEY: ''
+    AIRFLOW__API_AUTH__JWT_SECRET: ${AIRFLOW__API_AUTH__JWT_SECRET}
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'false'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
-    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8081/execution/'
+    AIRFLOW__CORE__EXECUTION_API_SERVER_URL: 'http://airflow-apiserver:8080/execution/'
     AIRFLOW__CORE__LOAD_DEFAULT_CONNECTIONS: 'false'
     AIRFLOW__LOGGING__REMOTE_LOGGING: 'False'
   volumes:
@@ -25,6 +26,8 @@ x-airflow-common:
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
+    redis:
+      condition: service_healthy    
     postgres:
       condition: service_healthy
 
@@ -86,24 +89,22 @@ services:
       timeout: 5s
       retries: 5
 
-  # Redpanda Console (monitoring visuel du broker)
-  redpanda-console:
-    image: docker.redpanda.com/redpandadata/console:latest
-    container_name: redpanda_console
-    environment:
-      - KAFKA_BROKERS=redpanda:9092
-    ports:
-      - "8080:8080"
-    depends_on:
-      - redpanda  
+  # # Redpanda Console (monitoring visuel du broker)
+  # redpanda-console:
+  #   image: docker.redpanda.com/redpandadata/console:latest
+  #   container_name: redpanda_console
+  #   environment:
+  #     - KAFKA_BROKERS=redpanda:9092
+  #   ports:
+  #     - "8080:8080"
+  #   depends_on:
+  #     - redpanda  
 
   airflow-apiserver:
     <<: *airflow-common
     command: api-server
     ports:
-      - "8081:8080"
-    env_file:
-      - .env
+      - "8080:8080"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8080/api/v2/version"]
       interval: 30s
@@ -153,6 +154,8 @@ services:
   airflow-worker:
     <<: *airflow-common
     command: celery worker
+    env_file:
+      - .env
     healthcheck:
       # yamllint disable rule:line-length
       test:
@@ -172,6 +175,21 @@ services:
       <<: *airflow-common-depends-on
       airflow-apiserver:
         condition: service_healthy
+      airflow-init:
+        condition: service_completed_successfully
+
+  airflow-triggerer:
+    <<: *airflow-common
+    command: triggerer
+    healthcheck:
+      test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
+    restart: always
+    depends_on:
+      <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
 
@@ -266,9 +284,26 @@ services:
       _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
 
+  airflow-cli:
+    <<: *airflow-common
+    profiles:
+      - debug
+    environment:
+      <<: *airflow-common-env
+      CONNECTION_CHECK_MAX_COUNT: "0"
+    # Workaround for entrypoint issue. See: https://github.com/apache/airflow/issues/16252
+    command:
+      - bash
+      - -c
+      - airflow
+    depends_on:
+      <<: *airflow-common-depends-on
+
   flower:
     <<: *airflow-common
     command: celery flower
+    env_file:
+      - .env
     profiles:
       - flower
     ports:
