--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ x-airflow-common:
     - ./airflow/logs:/opt/airflow/logs
     - ./airflow/plugins:/opt/airflow/plugins
     - ./scripts:/opt/airflow/scripts
+    - ./great_expectations:/opt/airflow/great_expectations
     - ./requirements-airflow.txt:/requirements.txt
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
